--- a/views/formula1/index.ejs
+++ b/views/formula1/index.ejs
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formula 1</title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-  <h1>Formual 1 Drivers</h1>
+  <h1>Formula 1 Drivers</h1>
   <ol>
     <% formula1Drivers.forEach(driver => { %>
       <li>
